# c2py23

./: .gitignore  .gitmodules  404.html  AGENTS.md  LICENSE  MANIFEST.in  PLAN.md  README.md  SKILL.md  blog.copy.paste.txt  c2py23_requests.md  c2py23_source_harvest.md  continuation.md  index.html  mkdocs.yml  objects.inv  ppc64le-test.sh  pyproject.toml  setup.py  setup_pyodide.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: aarch64.yml  docs.yml  full_matrix.yml  linux.yml  linux_pythonh.yml  macos.yml  release.yml  summary.yml  wasm.yml  windows.yml
api/: index.html
audit/: export_full_repo.py  export_wrappers.py  index.html
audit/20260620/: bug_report.md  compare_generators.py  diff_generators.py  ref1.md  ref2.md  refactor_generator.py  workplan.md
benchmarks/: .bench_compiler_results.json  .bench_results.json  .gitignore  Makefile  README.md  conftest.py  generate_docs.py  index.html  test_getitem_overhead.py  test_noargs_overhead.py  test_vnorm_overhead.py
benchmarks/src/: c2py_getitem.c2py  c2py_getitem_wrapper.c  c2py_noargs.c2py  c2py_noargs_wrapper.c  c2py_vnorm.c2py  c2py_vnorm_bare.c2py  c2py_vnorm_bare_wrapper.c  c2py_vnorm_buffer.c2py  c2py_vnorm_buffer_wrapper.c  c2py_vnorm_dlpack.c2py  c2py_vnorm_dlpack_wrapper.c  c2py_vnorm_ndarray.c2py  c2py_vnorm_ndarray_wrapper.c  c2py_vnorm_wrapper.c  gold_getitem.c  gold_noargs.c  gold_numpy_vnorm.c  gold_vnorm.c  tiny_kernel.c  tiny_kernel.h
brainstorm/: .gitignore
brainstorm/tests/: .gitignore  hpy_type_check.c  package.json  pyodide_test.js  run_all.sh  run_bench.py  setup_hpy.py  setup_pyodide.sh  setup_pypy.sh  show_results.py
building/: index.html
c2py23/: __init__.py  __main__.py  build.py  c2py_loader.py  cli.py  generator.py  generator_ast.py  generator_builder.py  generator_reference.py.archived  harvester.py  invariant_checker.py  parser.py  perf.py  setuptools_helper.py
c2py23/runtime/: c2py.h  c2py_amd64.h  c2py_arm64.h  c2py_dlsym.c  c2py_dlsym.h  c2py_ppc64.h  c2py_pythonh.c  c2py_pythonh.h  c2py_runtime.c  c2py_runtime.h  merge_single_header.py
design/: index.html
developer_guide/: index.html
docs/: api.md  audit.md  benchmarks.md  building.md  c2pypi-specification.md  design.md  developer_guide.md  getting_started.md  index.md  pythonh.md  referee_reports.md  referee_reports_2026-06-15.md  setup_graalpy.sh  specification.md  user_guide.md
docs/examples/: cmake_demo.md  kissfft_wrap.md  lz4_wrap.md  meson_demo.md  mp_bench.md  simd_dispatch.md  threading_bench.md  timing_demo.md  wheel_demo.md
examples/: kissfft.c2py  kissfft_example.py  kissfft_thin.c  kissfftmod_wrapper.c  lz4.c2py  lz4_example.py  lz4_thin.c  lz4mod_wrapper.c
examples/cmake_demo/: CMakeLists.txt  README.md  arraysum.c  arraysum.c2py  build.sh  index.html  pyproject.toml  setup.py
examples/cmake_demo/arraysum/: __init__.py
examples/kissfft_wrap/: README.md  build.sh  example.py  index.html  kissfft.c2py  kissfft.c2py.py  kissfft_thin.c
examples/lz4_wrap/: README.md  build.sh  example.py  index.html  lz4.c2py  lz4.c2py.py  lz4_thin.c
examples/meson_demo/: README.md  arraysum.c2py  build.sh  index.html  meson.build  pyproject.toml  setup.py
examples/meson_demo/arraysum/: __init__.py
examples/mp_bench/: Makefile  README.md  bench_mp.py  index.html  mc_pi.c  mc_pi.c2py
examples/simd_dispatch/: CMakeLists.txt  MANIFEST.in  Makefile  README.md  build.sh  index.html  meson.build  poly_kernel.c  polysimd.c2py  polysimd.c2py.py  pyproject.toml  saxpy.c2py  saxpy_kernel.c  setup.py  test_polysimd.py  test_saxpy.py
examples/simd_dispatch/polysimd/: __init__.py
examples/threading_bench/: Makefile  README.md  bench_mc_pi.py  index.html  mc_pi.c  mc_pi.c2py
examples/timing_demo/: README.md  index.html  timing_demo.ipynb  wsum.c  wsum.c2py
examples/wheel_demo/: MANIFEST.in  README.md  arraysum.c  arraysum.c2py  build.sh  index.html  pyproject.toml  setup.py
examples/wheel_demo/arraysum/: __init__.py
getting_started/: index.html
pythonh/: index.html
search/: search_index.json
specification/: index.html
tests/: Makefile  abi_check_win.py  abi_diag.py  abi_list_dlls.py  abi_matrix.json  build_all.sh  check_abi.c  check_abi_win.c  check_dlpack_abi.c  check_numpy_abi.c  conftest.py  dump_loaded_dlls.py  populate_abi_matrix.py  requirements.txt  run_tests.sh  run_tests_only.sh  run_wasm_tests.js  runner.py  setup.py  test_abi_tag_compatibility.py  test_all.py  test_all_wasm.sh  test_aos_soa.py  test_error_paths.py  test_examples.py  test_interpreters.py  test_leaks.py  test_lifecycle.py  test_lto_devirt.md  test_lto_devirt.sh  test_makefile_deps.mk  test_manylinux.py  test_ndarray_backends.py  test_peer_review.py  test_ph_all.py  test_ph_ci_27.py  test_ph_ci_314t.py  test_ph_containers.sh  test_regression_fixes.py  test_single_header.py  (+2 more)
tests/cases/address/: address.c  address.c2py
tests/cases/array_sig/: array_sig.c  array_sig.c2py  array_sig.c2py.py
tests/cases/arraysum/: arraysum.c  arraysum.c2py  arraysum.c2py.py  arraysum_ast.c  arraysum_builder.c  arraysum_original.c
tests/cases/constants/: constants.c  constants.c2py
tests/cases/docstring/: docstring.c  docstring.c2py  docstring.c2py.py
tests/cases/dot/: dot.c  dot.c2py  dot.c2py.py
tests/cases/fill/: fill.c  fill.c2py
tests/cases/freethreading/: freethread.c  freethread.c2py
tests/cases/gil_release/: sleep_fill.c  sleep_fill.c2py  sleep_fill.c2py.py
tests/cases/optional/: optional.c  optional.c2py  optional.c2py.py
tests/cases/scalar_output/: stats.c  stats.c2py
tests/cases/simd_dispatch/: simd_fill.c  simd_fill.c2py
tests/cases/template/: sum.c2py  template.c
tests/cases/timing/: timing.c  timing.c2py
tests/cases/transform/: transform.c  transform.c2py  transform.c2py.py  xfrm_wrapper.c
tests/cases/types/: types.c  (+2 more)
tools/: check_ascii.py  convert_c2py_to_dict.py  find_repeated_text.py  generate_example_readmes.py  generate_makefile_deps.py
tools/audit/: README.md  export_full_repo.py  export_wrappers.py  referee_reports_2026-06-15.md
user_guide/: index.html
(+2 files in other folders)
