[build-system]
requires = ["setuptools>=44", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2py23"
dynamic = ["version", "readme"]
description = "Wrap C99 code to Python via the buffer protocol"
license-files = []
requires-python = ">=2.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = [
    "PyYAML>=5.1;python_version>='3'",
    "PyYAML>=3.10,<6;python_version=='2.7'",
]

[project.optional-dependencies]

[project.scripts]
c2py23 = "c2py23.cli:main"

[tool.setuptools.packages.find]
include = ["c2py23*"]
