[build-system]
requires = ["setuptools>=44", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2py23"
dynamic = ["version", "readme"]
description = "Wrap C99 code to Python via the buffer protocol"
requires-python = ">=2.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = []

[project.optional-dependencies]
yaml = [
    "PyYAML>=5.1;python_version>='3'",
    "PyYAML>=3.10,<6;python_version=='2.7'",
]

[project.scripts]
c2py23 = "c2py23.cli:main"

[project.urls]
Homepage = "https://github.com/jonwright/c2py23"

[tool.setuptools.packages.find]
include = ["c2py23*"]

[tool.black]
line-length = 120
target-version = ["py33"]
exclude = '''
/(
    tests/test_venv_3\.12
  | tests/test_venv_3\.15
  | tests/cases
  | examples/kissfft
  | examples/lz4
)/
'''
